--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ thiserror = "1"
 structopt = "0.3"
 include_dir = "0.6"
 cargo_metadata = "0.9.1"
-owo-colors = { git = "https://github.com/jam1garner/owo-colors", branch = "tty", features = ["tty"] }
+owo-colors = { version = "1.3", features = ["tty"] }
