--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
 edition = "2018"
 
+include = ["src/**/*", "Cargo.toml", "template", "template_git"]
+
 [dependencies]
 thiserror = "1"
 structopt = "0.3"
