Add README and Cargo.toml links

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "cargo-mextk"
 version = "0.1.0"
 authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
 edition = "2018"
+description = "A cargo subcommand for build and working with melee mods"
+license = "MIT"
+repository = "https://github.com/jam1garner/cargo-mextk"
+documentation = "https://docs.rs/cargo-mextk"
 
 [dependencies]
 thiserror = "1"
