Add ISO extraction restoration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ structopt = "0.3"
 include_dir = "0.6"
 cargo_metadata = "0.9.1"
 owo-colors = { version = "1.3", features = ["tty"] }
-dirs-next = "2.0.0"
-gc-gcm = "0.8.0"
-rayon = "1.5.0"
-memmap = "0.7.0"
-humansize = "1.1.0"
-cli-table = "0.4.1"
+dirs-next = "2"
+#gc-gcm = "0.9"
+gc-gcm = { path = "../gc-gcm" }
+rayon = "1.5"
+memmap = "0.7"
+humansize = "1.1"
+cli-table = "0.4"
+seahash = "4.1.0"
+pathdiff = "0.2.0"
