--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-mextk"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
 edition = "2018"
 description = "A cargo subcommand for build and working with melee mods"
@@ -15,11 +15,11 @@ include_dir = "0.6"
 cargo_metadata = "0.9.1"
 owo-colors = { version = "1.3", features = ["tty"] }
 dirs-next = "2"
-#gc-gcm = "0.9"
-gc-gcm = { path = "../gc-gcm" }
+gc-gcm = "0.10"
 rayon = "1.5"
 memmap = "0.7"
 humansize = "1.1"
 cli-table = "0.4"
 seahash = "4.1.0"
 pathdiff = "0.2.0"
+ureq = "2.0.1"
