--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ cli-table = "0.4"
 seahash = "4.1.0"
 pathdiff = "0.2.0"
 ureq = "2.0.1"
+serde = { version = "1", features = ["derive"] }
+toml = "0.5"
+bsdiff = "0.1.3"
+xdelta3 = "0.1"
