--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,7 @@ jobs:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     needs: build
     name: Upload Release
+    steps:
       - uses: actions/download-artifact@v2
         with:
           name: cargo-mextk-installer.msi
