--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,7 @@ jobs:
         path: target/wix/cargo-mextk-installer.msi
   release:
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
     needs: build
     name: Upload Release
     steps:
