--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload Windows Build
-        id: upload-release-asset 
+        id: upload-windows
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -87,7 +87,7 @@ jobs:
           asset_name: cargo-mextk-installer.msi
           asset_content_type: application/octet-stream
       - name: Upload Linux Build
-        id: upload-release-asset 
+        id: upload-linux
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -97,7 +97,7 @@ jobs:
           asset_name: cargo-mextk
           asset_content_type: application/octet-stream
       - name: Upload MacOS Build
-        id: upload-release-asset 
+        id: upload-macos
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
