--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  create:
+    tags:
+      - v*
 
 env:
   CARGO_TERM_COLOR: always
@@ -47,7 +50,7 @@ jobs:
         name: cargo-mextk-installer.msi
         path: target/wix/cargo-mextk-installer.msi
   release:
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     needs: build
     name: Upload Release
